crates/nash-report/tests/solve/snapshots/solve__inference__abstract_map_rejects_non_storable_builtin_list_results.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2702
description: "module Main exposing (..)\nimport Builtin\ntrait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\nimpl Functor list where\n    map f xs =\n        case xs of\n            [] -> []\n            x :: rest -> Builtin.mkCons (f x) (map f rest)\nbad = map (\\x -> (x, x)) [()]\n"
info: diagnostic
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Builtin.Storable ( unit, unit )`.
    ╭─[Main.nash:10:7]
  9 │             x :: rest -> Builtin.mkCons (f x) (map f rest)
 10 │ bad = map (\x -> (x, x)) [()]
    ·       ─┬─
    ·        ╰── required by `type application`
    ╰────
  help: Requirement chain:

            forming list ( unit, unit )
            list ( unit, unit )

        Use a type with Big or Const representation; an impl cannot change representation.


nash::type::missing_impl

  × Unsatisfied representation constraint `Builtin.Storable ( unit, unit )`.
    ╭─[Main.nash:10:7]
  9 │             x :: rest -> Builtin.mkCons (f x) (map f rest)
 10 │ bad = map (\x -> (x, x)) [()]
    ·       ─┬─
    ·        ╰── required by `map`
    ╰────
  help: Requirement chain:

            list ( unit, unit )

        Use a type with Big or Const representation; an impl cannot change representation.


nash::type::missing_impl

  × Unsatisfied representation constraint `Builtin.Storable ( unit, unit )`.
    ╭─[Main.nash:10:7]
  9 │             x :: rest -> Builtin.mkCons (f x) (map f rest)
 10 │ bad = map (\x -> (x, x)) [()]
    ·       ───────────┬───────────
    ·                  ╰── required by `type application`
    ╰────
  help: Requirement chain:

            forming list ( unit, unit )

        Use a type with Big or Const representation; an impl cannot change representation.
