crates/nash-report/tests/solve/snapshots/solve__inference__apply_function.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2068
description: "Code:\n\nmodule Main exposing (apply)\n\napply f x = f x\n"
---
apply : forall a b. (a -> b) -> a -> b
