crates/nash-report/tests/solve/snapshots/solve__inference__case_with_default.snap
---
source: crates/nash-report/tests/solve/inference.rs
assertion_line: 2256
description: "Code:\n\nmodule Main exposing (Maybe(..), withDefault)\n\ntype Maybe 'a\n    = Just 'a\n    | Nothing\n\nwithDefault default maybe =\n    case maybe of\n        Just value ->\n            value\n\n        Nothing ->\n            default\n"
---
withDefault : forall a. Big a => a -> Maybe a -> a
